# projects

./: .pre-commit-config.yaml  .secrets.baseline  README.md  package.json  pyproject.toml
projects/convo/: convo.ipynb  scene.txt  screenplay.txt
projects/cresdom/: cresdom.ipynb
projects/cresdom-dspy/: test.ipynb  test2.ipynb
projects/workshop/: LICENSE.md  README.md  ai-workshop.md  create-attack-slides.py  gen-attack-slides.sh  gen-slides.sh  jailbreaking-for-lawyers.md  presentation.html  tokenizer.py  workshop.md
